@@ -251,4 +251,8 @@ public class ZkContainer {
     }
     
   }
+
+  public ExecutorService getCoreZkRegisterExecutorService() {
+    return coreZkRegister;
+  }
 }
